--- a/modules/programs/shells/ui/oh-my-posh/config/config.toml
+++ b/modules/programs/shells/ui/oh-my-posh/config/config.toml
@@ -67,7 +67,26 @@ template = ""
 
     [blocks.segments.properties]
       branch_icon = ""
+      commit_icon = "@"
       fetch_status = true
+
+
+[[blocks]]
+  type = "prompt"
+  overflow = "hidden"
+  alignment = "right"
+
+  # Execution time
+  [[blocks.segments]]
+    type = "executiontime"
+    style = "plain"
+    background = "transparent"
+    foreground = "p:system"
+    template = "󱦟 {{ .FormattedMs }}"
+
+    [blocks.segments.properties]
+      threshold = 5000
+      style = "round"
 
 
 [[blocks]]
