refactor: merge nixos and home manager repos into one

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,30 +1,58 @@
 {
   "cSpell.words": [
+    "alsa",
     "attrsets",
     "bindel",
     "bindl",
     "bindm",
     "brightnessctl",
+    "btop",
+    "dmask",
     "executiontime",
+    "fastfetch",
+    "fmask",
+    "getent",
+    "getopt",
     "ghostty",
+    "gnused",
+    "hashfile",
     "HYPRCURSOR",
+    "hyprland",
+    "modesetting",
     "movefocus",
     "movetoworkspace",
     "ncspot",
     "nerdfonts",
+    "networkd",
+    "networkmanager",
     "nixpkgs",
     "nofocus",
     "Nushell",
+    "oneshot",
+    "pipefail",
+    "pipewire",
+    "polkit",
     "popin",
+    "powersave",
+    "pulseaudio",
     "pseudotile",
     "rprompt",
+    "rtkit",
+    "rtsx",
     "scratchpad",
+    "sdmmc",
+    "stdenv",
     "suppressevent",
     "togglefloating",
     "togglespecialworkspace",
     "togglesplit",
+    "usbhid",
+    "UWSM",
+    "vfat",
     "windowrule",
     "wpctl",
+    "xhci",
+    "xwayland",
     "XCURSOR"
   ]
 }
