feat: add `openconnect`

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -26,10 +26,12 @@
     "nerdfonts",
     "networkd",
     "networkmanager",
+    "networkmanagerapplet",
     "nixpkgs",
     "nofocus",
     "Nushell",
     "oneshot",
+    "openconnect",
     "pipefail",
     "pipewire",
     "polkit",
