feat: add `hyprlock`

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -19,6 +19,7 @@
     "hashfile",
     "HYPRCURSOR",
     "hyprland",
+    "Hyprlock",
     "modesetting",
     "movefocus",
     "movetoworkspace",
