feat: getting somewhere

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,7 @@
     "brightnessctl",
     "btop",
     "dmask",
+    "dpkg",
     "drun",
     "executiontime",
     "fastfetch",
@@ -35,6 +36,7 @@
     "openconnect",
     "pipefail",
     "pipewire",
+    "pname",
     "polkit",
     "popin",
     "powersave",
