fix: `Cisco Packet Tracer` works!

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -21,6 +21,7 @@
     "HYPRCURSOR",
     "hyprland",
     "Hyprlock",
+    "libxkbfile",
     "modesetting",
     "movefocus",
     "movetoworkspace",
